--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "updatedportfoliotwo",
   "version": "1.0.0",
-  "engines": {
-    "node": "13.3.0"
-  },
   "description": "",
   "main": "server.js",
+  "dependencies": {
+    "express": "^4.17.1",
+    "nodemon": "^2.0.1"
+  },
+  "devDependencies": {},
   "scripts": {
-    "start": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -19,10 +21,5 @@
   "bugs": {
     "url": "https://github.com/pav6778/updatedPortfolioTwo/issues"
   },
-  "homepage": "https://github.com/pav6778/updatedPortfolioTwo#readme",
-  "dependencies": {
-    "express": "^4.17.1",
-    "materialize-css": "^1.0.0-rc.2",
-    "nodemon": "^2.0.1"
-  }
+  "homepage": "https://github.com/pav6778/updatedPortfolioTwo#readme"
 }
