--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "dependencies": {
     "express": "^4.17.1",
-    "nodemon": "^2.0.1"
+    "nodemon": "^2.0.1",
+    "path": "^0.12.7"
   },
   "devDependencies": {},
   "scripts": {
